tests/sksl/errors/ReservedNameInvariant.glsl
### Compilation failed:

error: 1: name 'invariant' is reserved
int invariant;
    ^^^^^^^^^
1 error
